l'installation du temps de js test db

--- a/sources/game.css
+++ b/sources/game.css
@@ -95,3 +95,14 @@ ol{
     list-style-type: none;
 }
 
+.return{
+    background-color: blueviolet;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.return > a{
+    text-decoration: none ;
+    color: white;
+}
