--- a/sources/game.css
+++ b/sources/game.css
@@ -44,42 +44,20 @@ header {
     background-color: red;
 }
 
-.player, .enemy {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    border: 1px solid black;
-}
-
-.player {
-    background-color: green;
-}
-
-.enemy {
-    background-color: red;
-}
-
-/* Styles pour la barre de vie */
 .health-bar {
-    width: 30px;
-    height: 5px;
-    background-color: green;
     position: absolute;
-    top: -10px;
+    height: 10px;
+    bottom: 20px;
     left: 0;
+    width: 100%;
+    transition: width 0.2s;
 }
 
-.game-over {
+.laser {
+    width: 5px;
+    height: 15px;
+    background-color: blue;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    z-index: 10; 
 }
 
 #scoreboard {
@@ -91,18 +69,74 @@ header {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-ol{
+
+ol {
     list-style-type: none;
 }
 
-.return{
+.return {
     background-color: blueviolet;
     text-align: center;
     padding: 5px;
     border-radius: 5px;
 }
 
-.return > a{
-    text-decoration: none ;
+.return > a {
+    text-decoration: none;
     color: white;
+}
+
+.boss {
+    width: 70px;
+    height: 70px;
+    background-color: blue;
+    position: absolute;
+    border-radius: 10px;
+    border: 2px solid darkblue;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.boss .health-bar {
+    width: 100%;
+    height: 5px;
+    background-color: green;
+    position: absolute;
+    top: -10px;
+    border-radius: 5px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+    border-radius: 8px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
